[IMP] <pro>Attachment: Optimize the text overflow display of the upload button in the picture-card mode. & [FIX] Popover: Fixed the issue where the SelectBox check status was displayed incorrectly when the child wrapped by the Popover component had a SelectBox and the trigger method was set to click.

--- a/components-pro/attachment/style/index.less
+++ b/components-pro/attachment/style/index.less
@@ -286,6 +286,16 @@
     .@{iconfont-css-prefix} {
       color: rgba(0, 0, 0, .25);
     }
+
+    > button {
+      max-width: 100%;
+    }
+    .@{pro-attachment-prefix-cls}-card-button-inner {
+      max-width: 100%;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      pointer-events: initial;
+    }
   }
 
   &-order {
